tests/NormalTests/paczka1/fuzzy1/44257337.err
Error in line 2: b59qGHNUV S467 19,3
Error in line 6: KRMuS51BeD S467 63,7
Error in line 11: b59qGHNUV A518 -1,2
Error in line 23: b59qGHNUV A518 37,6
Error in line 26: 530I8yl3Xsa S467 28,3
